--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+            "papaparse" ],
             "outputPath": "dist/frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
