--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "chart.js": "^4.4.3",
+    "ngx-cookie-service": "^18.0.0",
     "ngx-papaparse": "^8.0.0",
     "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
